# wirewolf-browser

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
My own browser/: CMakeLists.txt  README.md
My own browser/src/: main.cpp  resources.qrc
src/: main.cpp  resources.qrc
